# evopop-icon-theme

./: CREDITS  LICENSE  Makefile.am  README.md  configure.ac  install.sh  new-symlink.sh  render-bitmaps.py
EvoPop/: index.theme
EvoPop/scalable/: categories  status
